--- a/index.html
+++ b/index.html
@@ -3,11 +3,41 @@
 
 <head>
     <meta charset="utf-8">
+    <title>San Diego Top Spots</title>
+    <link rel="stylesheet" href="styles.css" type="text/css"  >
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?v=3&sensor=false&libraries=geometry"></script>-->
 </head>
 
 <body>
-    <!-- Write your markup here -->
+    <header>
+        <h1>San Diego Top Spots</h1>
+    </header>
+    <main>
+        <p class="sorted"><input type="checkbox" id="sorted">Sort by distance</input></p>
+        <div id="locError"></div>
+        <table id="top_spots">
+            <thead>
+                <th>Name</th>
+                <th>Description</th>
+                <th>Link</th>
+                <th>Distance</th>
+            </thead>
+            <tbody id="table_body">
+                <!-- List Top Spots from file -->
+            </tbody>
+        </table>
+        <section>
+            <p><button onclick="initMap()">Show Map</button></p>
+            <div id="map">
+                <!-- show Google Map with pins in it-->
+            </div>
+        </section>
+    </main>
+    <script 
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC22kFQJnEY12ZzpEFSeNd4NU7nVP7OTsM&v=3&libraries=geometry">
+    </script>
+    <script src="main.js" charset="utf-8"></script>
 
-    <!-- Don't forget to add your <script> tag here -->
 </body>
 </html>
