removes API key

--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
             </div>
         </section>
     </main>
+    
+    <!-- Took out API key for security -->
     <script 
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC22kFQJnEY12ZzpEFSeNd4NU7nVP7OTsM&v=3&libraries=geometry">
+        src="https://maps.googleapis.com/maps/api/js?key=">
     </script>
     <script src="main.js" charset="utf-8"></script>
 
